cli/tests/snapshot/inputs/errors/record_access_suggestion.ncl
# capture = 'stderr'
# command = ['eval']
({
  some_field_name = "some value",
  another_field_name = "another value",
}).some_fild_nam
